--- a/17_style-layer/mimic-inline.html
+++ b/17_style-layer/mimic-inline.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>mimic</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  
 <style>
   body {
     font-family: sans-serif;
@@ -22,3 +31,29 @@ h1 {
   display: flex;
 }
 </style>
+
+  <body>
+    <header>
+        <h1>Foo Bar H One</h1>
+    </header>
+
+     <nav class="bar">
+        <h2>nav foo</h2>
+          <ul>
+              <li>dis</li>
+              <li>dat</li>
+              <li>de udda ting</li>
+          </ul>
+      </nav>
+
+    <div class="stuff">
+      <h2>main foo heading</h2>
+        <p>Stuy CS dolor sit amet merge qaf post update duckie upgrade DW design uv-radiation-emitting devices upgrade Repo of Holding. Analyze cobo develop gudfam...</p>
+        <p>Review big oh merge geethub optimize workshop refactor tidbit review keys to success support...</p>
+    </div>
+      
+
+    <footer>
+        <p>Copyright &copy; 2015 Clyde "Thluffy" Sinclair</p>
+    </footer>
+  </body>
