--- a/17_style-layer/mimic-inline.html
+++ b/17_style-layer/mimic-inline.html
@@ -27,9 +27,14 @@ h1 {
     color: #333;
 }
 
-.stuff {
+.n {
   display: flex;
 }
+
+.bar {
+  padding-right: 20px;
+}
+
 </style>
 
   <body>
@@ -37,6 +42,7 @@ h1 {
         <h1>Foo Bar H One</h1>
     </header>
 
+    <div class= "n">
      <nav class="bar">
         <h2>nav foo</h2>
           <ul>
@@ -46,13 +52,13 @@ h1 {
           </ul>
       </nav>
 
-    <div class="stuff">
+    <div>
       <h2>main foo heading</h2>
-        <p>Stuy CS dolor sit amet merge qaf post update duckie upgrade DW design uv-radiation-emitting devices upgrade Repo of Holding. Analyze cobo develop gudfam...</p>
-        <p>Review big oh merge geethub optimize workshop refactor tidbit review keys to success support...</p>
+        <p>Lorem ipsum odor amet, consectetuer adipiscing elit. Ante ligula dis mi, quisque non sapien. Lobortis consectetur phasellus euismod ut commodo felis sapien nulla. Urna ac tempor molestie torquent inceptos lacus eget dignissim? Habitasse id nam fringilla duis viverra at arcu ut condimentum. Nam libero lorem eleifend pellentesque suspendisse. Maecenas posuere suscipit sodales proin tellus diam sodales justo? Porta potenti tempor litora felis leo.</p>
+        <p>Donec vestibulum tempus parturient duis sed lacinia in. Praesent adipiscing faucibus; placerat fames nisl nunc. Quisque morbi laoreet tellus convallis praesent finibus quisque. Convallis rhoncus sem dui torquent interdum fames velit. Suscipit magnis parturient tristique himenaeos amet. Arcu dapibus mus aenean commodo odio accumsan adipiscing. Pulvinar augue tempor sem platea nam. Quis convallis in eleifend bibendum pellentesque laoreet. Dui tellus magna vel penatibus, nostra feugiat pretium.</p>
     </div>
       
-
+</div>
     <footer>
         <p>Copyright &copy; 2015 Clyde "Thluffy" Sinclair</p>
     </footer>
